--- a/test/database.yml
+++ b/test/database.yml
@@ -17,12 +17,12 @@ staging:
   timeout: 5000
 
 production:
-  adapter: jdbcmysql
-  host: metaserverdb1.cslctedjmc6k.us-east-1.rds.amazonaws.com
-  database: metadata
-  username: metaserver
-  password: L535X'twf8zk=4x
-  pool: 5
-  timeout: 5000
+    adapter: jdbcmysql
+    host: 192.168.42.11
+    database: metadata
+    username: vagrant
+    password: vagrant
+    pool: 5
+    timeout: 5000
 
 
