--- a/tools/price/database.yml
+++ b/tools/price/database.yml
@@ -4,25 +4,25 @@ development:
   database: metadata
   username: vagrant
   password: vagrant
-  pool: 5
-  timeout: 5000
-
-staging:
-  adapter: jdbcmysql
-  host: localhost
-  database: metadata
-  username: vagrant
-  password: vagrant
-  pool: 5
-  timeout: 5000
+  pool: 10
+  timeout: 20000
 
 production:
+  adapter: jdbcmysql
+  host: 192.99.147.128
+  database: metadata
+  username: metaserver
+  password: metaserver
+  pool: 10
+  timeout: 30000
+
+staging:
   adapter: jdbcmysql
   host: metaserverdb1.cslctedjmc6k.us-east-1.rds.amazonaws.com
   database: metadata
   username: metaserver
   password: L535X'twf8zk=4x
-  pool: 5
-  timeout: 5000
+  pool: 10
+  timeout: 20000
 
 
