--- a/config/database.yml
+++ b/config/database.yml
@@ -1,9 +1,9 @@
 development:
   adapter: jdbcmysql
-  host: 192.168.42.11
+  host: 192.99.147.128
   database: metadata
-  username: vagrant
-  password: vagrant
+  username: metaserver
+  password: metaserver
   pool: 5
   timeout: 5000
 
